--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.373.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
