--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "formik": "^2.4.6",
+    "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.373.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
