--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
     "@headlessui/react": "^2.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.2",
@@ -27,6 +28,7 @@
     "next": "14.2.3",
     "nookies": "^2.5.2",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.14",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
