--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@headlessui/react": "^2.0.4",
+    "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -31,6 +32,7 @@
     "react-awesome-reveal": "^4.2.14",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
